# Texas-Texture-Converter

./: CMakeLists.txt  Dark stylesheet.txt  QtDesigner_Project.ui
include/: ImageTab.hpp  MainTexasWindow.hpp
include/TexasGUI/: Utilities.hpp
src/: ImageTab.cpp  MainTexasWindow.cpp  main.cpp
